--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,7 @@
     = javascript_include_tag 'application'
 
     = csrf_meta_tags
-  %body{style:'padding-top: 55px;'}
+  %body
     = render 'layouts/navigation'
     #wrap
       .container
