--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -11,6 +11,6 @@
 -else
   %li= link_to 'Sign in', new_user_session_path
 
-- if user_signed_in? and current_user.role == 'supplier'
+- if user_signed_in? #and current_user.role == 'supplier'
   %li= link_to t('eval'), tqrdc_scores_path #link_to t('attributes.u1_score'), supplier_entry_tqrdc_scores_path
 
