--- a/app/views/tqrdc/scores/show.html.haml
+++ b/app/views/tqrdc/scores/show.html.haml
@@ -11,16 +11,16 @@
 %table.table.table-condensed.table-striped.table-bordered.small
   %tbody
     %tr
-      %td{width:'10%'}
+      %td{width:'15%'}
         .text-right.text-primary
           %b= t('attributes.supplier')
-      %td{width: '40%'}
+      %td{width: '35%'}
         = @order.supplier.supplier
         = @order.supplier
-      %td{width: '10%'}
+      %td{width: '15%'}
         .text-right.text-primary
           %b= t('attributes.period')
-      %td{width: '40%'}
+      %td{width: '35%'}
         = @order.period
     %tr
       %td.text-right.text-primary
@@ -81,7 +81,6 @@
             %th
               .text-primary
                 = @qheads[order_line.qhead_id].name
-              %p
               = @qheads[order_line.qhead_id].description
             %th{:width=> '30px', :class=> 'text-center'}
               = t('attributes.score')
@@ -132,8 +131,10 @@
                     .media-left.small
                       %img.media-object{:src=>'/person.jpg', :alt=>'*'}
                     .media-body
-                      %h6.media-heading.text-primary
-                        = @users[order_line.u1_user_id]
+                      %h6.media-heading
+                        = t('attributes.u1_user')
+                        %span.text-primary
+                          = @users[order_line.u1_user_id]
                         %small
                           = order_line.u1_sign_date.strftime('%Y-%m-%d %H:%M') unless order_line.u1_sign_date.nil?
                       = order_line.u1_comment
@@ -142,8 +143,10 @@
                     .media-left.small
                       %img.media-object{:src=>'/person.jpg', :alt=>'*'}
                     .media-body
-                      %h6.media-heading.text-primary
-                        = @users[order_line.u2_user_id]
+                      %h6.media-heading
+                        = t('attributes.u2_user')
+                        %span.text-primary
+                          = @users[order_line.u2_user_id]
                         %small
                           = order_line.u2_sign_date.strftime('%Y-%m-%d %H:%M') unless order_line.u2_sign_date.nil?
                       = order_line.u2_comment
@@ -152,8 +155,10 @@
                     .media-left.small
                       %img.media-object{:src=>'/person.jpg', :alt=>'*'}
                     .media-body
-                      %h6.media-heading.text-primary
-                        = @users[order_line.u3_user_id]
+                      %h6.media-heading
+                        = t('attributes.u3_user')
+                        %span.text-primary
+                          = @users[order_line.u3_user_id]
                         %small
                           = order_line.u3_sign_date.strftime('%Y-%m-%d %H:%M') unless order_line.u3_sign_date.nil?
                       = order_line.u3_comment
@@ -162,8 +167,10 @@
                     .media-left.small
                       %img.media-object{:src=>'/person.jpg', :alt=>'*'}
                     .media-body
-                      %h6.media-heading.text-primary
-                        = @users[order_line.u4_user_id]
+                      %h6.media-heading
+                        = t('attributes.u4_user')
+                        %span.text-primary
+                          = @users[order_line.u4_user_id]
                         %small
                           = order_line.u4_sign_date.strftime('%Y-%m-%d %H:%M') unless order_line.u4_sign_date.nil?
                       = order_line.u4_comment
@@ -172,7 +179,10 @@
 %h5.hidden-print
   = link_to t('edit'), edit_tqrdc_score_path(@order)
   \|
-  = link_to t('back'), tqrdc_scores_path
+  = link_to t('back'), tqrdc_scores_path({:anchor => "order_#{@order.id}"})
+  - @order.order_groups.each do |order_group|
+    |
+    = link_to "#{@groups[order_group.group_id].name} #{@groups[order_group.group_id].description}", "##{@groups[order_group.group_id].name.upcase}"
 
 :javascript
   $(document).ready(function () {
