--- a/app/views/tqrdc/scores/show.html.haml
+++ b/app/views/tqrdc/scores/show.html.haml
@@ -71,7 +71,7 @@
         %b= order_group.u4_tot.to_i
 
   - i = 0
-  - @order.order_lines.each do |order_line|
+  - (@order.order_lines.sort_by &:id).each do |order_line|
     - if order_line.order_group_id == order_group.id
       %table.table.table-condensed.table-bordered.small
         %thead
