--- a/app/views/tqrdc/scores/show.html.haml
+++ b/app/views/tqrdc/scores/show.html.haml
@@ -97,7 +97,7 @@
               %div{'data-toggle'=> 'tooltip', :title=> @users[order_line.u4_user_id]}
                 = t('attributes.u4_user')
         %tbody
-          - Tqrdc::Qline.where(:qhead_id => order_line.qhead.id).each do |qline|
+          - @qlines[order_line.qhead_id].each do |qline|
             %tr
               %td
               %td
