--- a/app/views/tqrdc/jobs/_form.html.haml
+++ b/app/views/tqrdc/jobs/_form.html.haml
@@ -3,7 +3,7 @@
 
   .form-inputs
     = f.input :object_name
-    = f.input :object_id
+    = f.input :objectid
     = f.input :email
     = f.input :job_owner
     = f.input :job_params
