--- a/app/views/tqrdc/jobs/index.html.haml
+++ b/app/views/tqrdc/jobs/index.html.haml
@@ -34,7 +34,7 @@
             = link_to t('delete'), tqrdc_job, :method => :delete, :data => { :confirm => t('confirm_delete')}
 
           %td= tqrdc_job.object_name
-          %td= tqrdc_job.object_id
+          %td= tqrdc_job.objectid
           %td= tqrdc_job.email
           %td= tqrdc_job.job_owner
           %td= tqrdc_job.job_params
