--- a/app/views/tqrdc/jobs/index.html.haml
+++ b/app/views/tqrdc/jobs/index.html.haml
@@ -14,7 +14,7 @@
       %tr
         %th= t('action')
         %th= t('attributes.object_name')
-        %th= t('attributes.object_id')
+        %th= t('attributes.objectid')
         %th= t('attributes.email')
         %th= t('attributes.job_owner')
         %th= t('attributes.job_params')
