--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -9,6 +9,7 @@
   %li= link_to '題目選項', tqrdc_qlines_path if current_user.role == 'admin'
   %li= link_to '流程設定', tqrdc_flows_path if current_user.role == 'admin'
   %li= link_to 'Job設定', tqrdc_jobs_path if current_user.role == 'admin'
+  %li= link_to '查詢', order_summary_tqrdc_reports_path if current_user.role == 'admin'
 -else
   %li= link_to 'Sign in', new_user_session_path
 
