--- a/app/views/tqrdc/scores/index.html.haml
+++ b/app/views/tqrdc/scores/index.html.haml
@@ -4,6 +4,7 @@
   = text_field_tag :period, nil, placeholder: t('attributes.period'), class: 'form-control input-sm', value: params[:period] || (Time.now - 1.month).strftime('%Y%m')
   = text_field_tag :territory, nil, placeholder: t('attributes.territory'), class: 'form-control input-sm', value: params[:territory]
   = text_field_tag :supplier, nil, placeholder: t('attributes.supplier'), class: 'form-control input-sm', value: params[:supplier]
+  = text_field_tag :vname, nil, placeholder: t('attributes.vname'), class: 'form-control input-sm', value: params[:vname]
   = button_tag class: 'btn btn-success btn-form-submit', type: 'button' do
     %span.glyphicon.glyphicon-search
 %p
