--- a/app/views/tqrdc/suppliers/_form.html.haml
+++ b/app/views/tqrdc/suppliers/_form.html.haml
@@ -22,6 +22,9 @@
 
     = f.input :territory , collection: Figaro.env.territory.split(",")
 
+    = f.input :disty , collection: Figaro.env.disty.split(",")
+
+    = f.input :maker
 
   .form-actions
     .clearfix
